# fastapi-dify-tool-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  gunicorn_runner.py
app/core/: settings.py
app/db/: utils.py
app/repositories/: generate_lession.py  (+4 more)
deploy/: docker-compose.dev.yml
outputs/: 0371bdc0-81ae-4ca9-bda4-9ab0459e1ee8_tt_presentation.pptx  05fc2a97-caec-4c08-b876-d23a454a627f_tt.md  06430b91-e1f4-43ab-ad10-5c8e667dfa94_tt.md  082883db-bf13-4f76-a5b5-215c065537f8_tt.md  0850bcd7-2669-41bf-ba60-70865696fed2_tt_presentation.pptx  0981789a-9132-4584-b1a8-a0211e1b3ef7_Tuần 2 -Tạo câu hỏi tự luận - Nguyễn Nhật Minh  .md  0c905902-ad03-4077-84b2-a2439686032a_RAG Nhat Minh_presentation.pptx  0da3c038-eca6-411f-9fa1-3da807cc2730_RAG Nhat Minh_mindmap.xmind  0f1cbfdf-0be9-4468-bc29-052bf15b0f45_tt_presentation.pptx  10eefa23-26e7-4d63-b6d0-ac5797a67c12_RAG Nhat Minh_mindmap.xmind  12fe8e7e-359d-4570-83ff-8d243371fdd8_tt_presentation.pptx  13f65605-ac71-4e7a-b087-006cc48bc844_RAG Nhat Minh.md  1542ec60-5bd7-4293-8e35-58e618b4a3b0_NHATMINH - RAG, RAG PIPELINE, DIFY ,.md  15f503c2-3c61-413c-a4bc-bfbe37153437_tt_presentation.pptx  17becfb0-7f99-46b5-9218-2bb455b4850b_tt.md  1b6aec30-d573-4374-b981-46176d1f89ce_tt_questions.md  1f3d30f9-3c08-44ba-afe6-d65831ee56bb_RAG Nhat Minh.md  20992098-ae22-4075-868a-e0c4c8619f58_Tuần 2 -Tạo câu hỏi tự luận - Nguyễn Nhật Minh  .md  23e34800-1c95-4bcf-8dfd-bbd5b699f370_tt.md  2f954fca-364b-4f11-9ffc-eb126eb1fca5_tt.md  35dc41f4-aa8d-46c2-a468-1da1cdc5868a_tt.xmind  35dc41f4-aa8d-46c2-a468-1da1cdc5868a_tt.xmind.json  3692b8db-26a1-453d-8d21-32556d2b0439_tt_presentation.pptx  36df3a84-b852-4f7a-8058-dc4084266119_tt_presentation.pptx  39acf13f-ceb3-4652-994d-06a5329f81a7_Tuần 2 -Tạo câu hỏi tự luận - Nguyễn Nhật Minh  .md  3bede0c2-7f8e-4647-85b9-8462e77411cc_RAG Nhat Minh.md  4184f11b-5b54-4128-9f8a-4fc90a4e0e7e_tt.xmind.json  4247a48b-fb07-4d0d-80ab-440d7186e553_tt_presentation.pptx  4493f237-cbbe-4574-a5d6-434cf432e72c_tt_presentation.pptx  4527e10b-2b4a-4cf4-9f3e-c438fe7700bf_tt_presentation.pptx  46be455a-fcc5-4609-b6a3-d4cca313ff87_tt.md  47b497aa-eb26-4b41-a4cb-c278c4e1160d_tt_presentation.pptx  491172c5-a3f4-4b2c-b286-a73623bbebf8_RAG Nhat Minh_presentation.pptx  496b34ae-904a-4535-8fe8-1a38b2761aba_NHATMINH - RAG, RAG PIPELINE, DIFY ,.md  4de4e207-e616-4448-b446-3a7d0d6c7b4d_tt_presentation.pptx  513efc68-2904-4ee8-b3cb-ce06d76f09f2_tt_presentation.pptx  51893b9a-6a09-4ee7-ab49-edf879a66a6c_RAG Nhat Minh.md  51e5f1a3-509b-4199-8ef4-29fdd7be1256_tt_presentation.pptx  56459797-5f0d-4916-bab3-92c3f74dd6ed_tt.xmind  5b33ea6a-3f52-4e34-881b-b6698d4f30c7_tt_slides.pptx  (+64 more)
tests/: conftest.py
uploads/: AI2 Report.docx  Cardt.docx  f1ff9a26-147d-47a5-967d-509b016a5085_Tuần 2 -Tạo câu hỏi tự luận - Nguyễn Nhật Minh  .docx
(+7 files in other folders)
